add portuguese translate and infinityassets

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SushiSwap",
-  "name": "SushiSwap",
+  "short_name": "InfinitySwap",
+  "name": "InfinitySwap",
   "icons": [
     {
       "src": "./images/logo-192x192.png",
